fix(perc-system): type process package rawtypes/unchecked (#2299) (#2878)
Parent #2022 / #2200. PR-sized batch for com.percussion.process:
Map/List/Set generics on IPSProcess, IPSVariableResolver, IPSCommandHandler,
managers, resolvers, daemon handlers, and request params. Prefer real
generics over suppress. Behavioral tests (9) for manager load, command
resolution, resolvers, and request XML round-trip.

system: mvnw clean install BUILD SUCCESS (Tests run: 1697, Failures: 0).
Erlang review PASS.

Partial #2299 Refs #2022 #2200

> Co-Authored by Grok Build using grok-4.5 with agent main.